# number-bond-garden

./: Cargo.toml  Dioxus.toml  build.sh
assets/: main.css
docs/: index.html
docs/assets/: number-bond-garden-0b41457550a38eb3.js  number-bond-garden-0ba6346e6681ffc3.js.br  number-bond-garden-2377f6c65c7873a3.js.br  number-bond-garden-527472e06b871bb5.js.br  number-bond-garden-7d982b7c37654a25.js  number-bond-garden-7d982b7c37654a25.js.br  number-bond-garden-9b75845455488af7.js  number-bond-garden-ee1e04c515ea1e06.js  number-bond-garden_bg-0e1b702df896afe4.wasm  number-bond-garden_bg-0e1b702df896afe4.wasm.br  number-bond-garden_bg-0fe2e1cb7ca82bde.wasm  number-bond-garden_bg-0fe2e1cb7ca82bde.wasm.br  number-bond-garden_bg-28b0357ef88a7693.wasm  number-bond-garden_bg-28b0357ef88a7693.wasm.br  number-bond-garden_bg-2ef431dd76b27fa5.wasm  number-bond-garden_bg-2ef431dd76b27fa5.wasm.br  number-bond-garden_bg-36b984bd2a0b0ae3.wasm  number-bond-garden_bg-36b984bd2a0b0ae3.wasm.br  number-bond-garden_bg-3752cf3d84eeedbc.wasm  number-bond-garden_bg-3752cf3d84eeedbc.wasm.br  number-bond-garden_bg-3eb76c2f7b4d20c1.wasm  number-bond-garden_bg-3eb76c2f7b4d20c1.wasm.br  number-bond-garden_bg-3fb27085ef94b382.wasm  number-bond-garden_bg-3fb27085ef94b382.wasm.br  number-bond-garden_bg-562e5b7166322aa3.wasm  number-bond-garden_bg-562e5b7166322aa3.wasm.br  number-bond-garden_bg-5ab72248ffa7d1c8.wasm  number-bond-garden_bg-5ab72248ffa7d1c8.wasm.br  number-bond-garden_bg-646778198c856c4d.wasm  number-bond-garden_bg-646778198c856c4d.wasm.br  number-bond-garden_bg-6bb89f4bf07c9205.wasm  number-bond-garden_bg-6bb89f4bf07c9205.wasm.br  number-bond-garden_bg-75f6a9cad0360b33.wasm  number-bond-garden_bg-75f6a9cad0360b33.wasm.br  number-bond-garden_bg-855ab18d0917eb38.wasm  number-bond-garden_bg-855ab18d0917eb38.wasm.br  number-bond-garden_bg-98ef6301508f9a04.wasm  number-bond-garden_bg-98ef6301508f9a04.wasm.br  number-bond-garden_bg-99367249d7fa0308.wasm  number-bond-garden_bg-99367249d7fa0308.wasm.br  (+18 more)
src/: main.rs
src/components/: board.rs  hexbox.rs  hexgrid.rs  mod.rs
src/game/: board.rs  consts.rs  difficulty.rs  gamestate.rs  mod.rs  rng.rs
src/notes/: free_orb_stats.ods  free_orb_stats_hard.ods  generation_notes.txt
