[package]
name = "number-bond-garden"
version = "0.1.0"
authors = ["Spheniscine <spheniscine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-css-minify = "1.0.0"
dioxus = { version = "0.6.3", features = [] }
hexx = { version = "0.24.0", features = ["grid", "serde"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
