[package]
name = "number-bond-garden"
version = "0.1.0"
authors = ["Spheniscine <spheniscine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-css-minify = "1.0.0"
dioxus = { version = "0.6.3", features = [] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
hexx = { version = "0.24.0", features = ["serde"], default-features = false }
indexmap = "2.13.0"
rand = "0.10.0"
rand_core = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shash = { version = "0.2.0", features = ["wasm"] }
tracing = "0.1.44"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
